[package]
name = "youtube_upload"
version = "0.1.0"
edition = "2021"

[dependencies]
google-youtube3 = "5"
google-gmail1 = "5"
hyper = "0.14"
hyper-rustls = "0.25"
mime = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
strip = true
lto = true
